--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <!-- Hero Image -->
             <div class="md:w-1/2 relative">
                 <div class="relative z-10">
-                    <img src="assets/images/hero-model.png" alt="Modelo juvenil" class="w-full max-w-md mx-auto float-animation">
+                    <img src="assets/images/1753045286024.jpg" alt="Modelo juvenil" class="w-full max-w-md mx-auto float-animation">
                 </div>
                 <div class="absolute -bottom-10 -right-10 w-64 h-64 bg-primary/10 rounded-full z-0"></div>
                 <div class="absolute -top-10 -left-10 w-48 h-48 bg-secondary/10 rounded-full z-0"></div>
