--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="product-card group">
                     <div class="product-badge">Nuevo</div>
                     <div class="product-image-container">
-                        <img src="assets/products/product1.jpg" alt="Camiseta Urban" class="product-image">
+                        <img src="assets/products/camiseta_urban.png" alt="Camiseta Urban" class="product-image">
                         <div class="product-overlay">
                             <button class="quick-view-btn" data-product="1">
                                 <i class="fas fa-eye mr-2"></i> Vista rápida
